# beaupy

./: .coveragerc  .gitignore  404.html  APIDOC.md  LICENSE  README.md  coverage.xml  example.py  index.html  pyproject.toml  requirements-dev.txt  sitemap.xml  sonar-project.properties
.github/: NOTE.md
.github/workflows/: codeql.yml  python-docs.yml  python-lint.yml  python-publish.yml  python-test.yml
api/: index.html
beaupy/: __init__.py  _beaupy.py  _internals.py  beaupy.py  internals.py  spinners.py
beaupy/key/: __init__.py  _key.py  _posix_key.py
beaupy/spinners/: __init__.py  _spinners.py
docs/: build.novella  mkdocs.yml  requirements.txt
docs/content/: api.md  examples.md  index.md
examples/: index.html
pytui/: __init__.py  pytui.py
search/: search_index.json
test/: beaupy_confirm_test.py  beaupy_internals_test.py  beaupy_prompt_test.py  beaupy_select_multiple_test.py  beaupy_select_test.py  beaupy_spinners_test.py  pytui_confirm_test.py  pytui_select_multiple_test.py  pytui_select_test.py  pytui_test.py
